# acuvia

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: model.py  preprocessing.py  rules.py  train.py
backend/app/ai/artifacts/: rf_model.joblib  vectorizer.joblib
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  history.py  triage.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  chat.py  triage.py
backend/app/services/: chatbot.py  hospitals.py
frontend/acuvia_app/: .env  README.md  pubspec.yaml
frontend/acuvia_app/android/: gradle.properties
frontend/acuvia_app/android/app/: build.gradle.kts
frontend/acuvia_app/ios/Runner/: Info.plist
frontend/acuvia_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/acuvia_app/lib/: main.dart
frontend/acuvia_app/lib/auth/: forgot_password_screen.dart  login_screen.dart  register_screen.dart
frontend/acuvia_app/lib/core/: constants.dart  error_mapper.dart  http_client.dart  router.dart  theme.dart
frontend/acuvia_app/lib/data/models/: chat.dart  (+11 more)
frontend/acuvia_app/linux/: CMakeLists.txt
frontend/acuvia_app/linux/runner/: my_application.cc
frontend/acuvia_app/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/acuvia_app/macos/Runner.xcodeproj/: project.pbxproj
frontend/acuvia_app/test/: widget_test.dart
frontend/acuvia_app/web/: index.html  manifest.json
frontend/acuvia_app/windows/: CMakeLists.txt
frontend/acuvia_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/acuvia_app/windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
