[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kaykayag",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0,<0.130.0",
    "uvicorn[standard]>=0.23.0,<0.24.0",
    "sqlalchemy>=2.0.18,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "python-jose[cryptography]>=3.0.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.5.2,<3.0.0",
    "alembic (>=1.18.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
